--- a/src/App.css
+++ b/src/App.css
@@ -18,12 +18,14 @@
 
 #card {
   border: none;
+  box-shadow: 5px 5px 32px 0px #625757;
   transition: box-shadow 0.3s ease-in;
+  border: 4px double #722929;
   background-color: antiquewhite;
 }
 
 #card:hover {
-  box-shadow: 5px 5px 32px 0px #545454;
+  box-shadow: 5px 5px 32px 0px #201111;
   cursor: pointer;
 }
 
